Really fixed z-index bug

--- a/www/css/style.mac.css
+++ b/www/css/style.mac.css
@@ -4248,7 +4248,7 @@ a.comment-child-link::before {
 	-moz-user-select: none;
 	user-select: none;
 }
-.comment-controls:focus-within {
+.comment-controls.active {
 	z-index: 9999;
 }
 .comment-thread .comment-controls + .comment-thread > li:first-child {
